--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,18 +13,25 @@ body{@apply  text-white;background-color: rgb(22, 35, 64);
 }
 .imagen{object-fit: cover;
 z-index: -2;}
-.divform{@media (max-width: 767px) {
+.divform{@media (max-width: 400px) {
   display: inline-block;
   
   
 }
+display: inline-block;
   background-color: #ffffff10;
   backdrop-filter: blur(5px);
   border-radius:   10px;
   margin: -10px;
   display: contents;
 }
-.datos{flex-grow: 3;
+.datos{@media (max-width: 780px) {
+  display: inline-block;
+
+
+}  
+
+flex-grow: 3;
   display: flex;
   padding-right: 20px;
   
