--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,12 @@ flex-grow: 3;
   
 
 }
-
+.titulo{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 50px;
+  color: rgb(98, 156, 204);
+  text-shadow:2px 2px #2600ff;
+}
 
 
 
